--- a/Moving.css
+++ b/Moving.css
@@ -9,23 +9,81 @@ selector{
 
 body{
     background-color: rgb(196, 110, 39);
-    color: rgb(10, 40, 211); 
-}
-
-nav{
-    height: 600px;
-    width: 200px;
-    float: left;
-    padding: 5px;
-    line-height: 30px;
+    color: rgb(0, 0, 0); 
 }
 
 footer{
     text-align: center;
-    margin-right: 200px;
 }
 
 h1{
     text-align: center;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', monospace;
+}
+
+ul {
+    list-style: none;
+    background: #19ac39;
+}
+
+ul li {
+    display: inline-block;
+    position: relative;
+}
+
+ul li a {
+    display: block;
+    padding: 20px 25px;
+    color: #000000;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+}
+
+ul li ul.dropdown li {
+    display: block;
+}
+
+ul li ul.dropdown {
+    width: 100%;
+    background: #8c52ff;
+    position: absolute;
+    z-index: 999;
+    display: none;
+}
+
+ul li a:hover {
+    background: #6d30e9;
+}
+
+ul li:hover ul.dropdown {
+    display: block;
+}
+
+.scrolling-text-container{
+    text-align: center;
+}
+
+.p1{
+    text-align: center;
+}
+
+.myDiv{
+    text-align: center;
+}
+
+button{
+    background-color: #18f98f;
+    border: none;
+    position: center;
+    padding: 20px 50px;
+    font-size: 30px;
+    font-weight: bold;
+}
