--- a/main.css
+++ b/main.css
@@ -7,28 +7,88 @@ selector{
 }
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', monospace;
+}
+
+ul {
+    list-style: none;
+    background: #19ac39;
+}
+
+ul li {
+    display: inline-block;
+    position: relative;
+}
+
+ul li a {
+    display: block;
+    padding: 20px 25px;
+    color: #000000;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+}
+
+ul li ul.dropdown li {
+    display: block;
+}
+
+ul li ul.dropdown {
+    width: 100%;
+    background: #8c52ff;
+    position: absolute;
+    z-index: 999;
+    display: none;
+}
+
+ul li a:hover {
+    background: #6d30e9;
+}
+
+ul li:hover ul.dropdown {
+    display: block;
+}
+
+
+h1{
+    text-align: center;
+}
+
 body{
     background-color: rgb(16, 16, 233);
     color: rgb(238, 228, 228); 
 }
 
-nav{
-    height: 600px;
-    width: 200px;
-    float: left;
-    padding: 5px;
-    line-height: 30px;
+#birdImage{
+    margin-right: 100px;
 }
 
 footer{
     text-align: center;
-    margin-right: 200px;
 }
 
-#birdImage{
-    margin-right: 200px;
-}
-
-h1{
+h4{
     text-align: center;
+}
+
+P{
+    text-align: center;
+}
+
+.myDiv{
+    text-align: center;
+}
+
+button{
+    background-color: #18f98f;
+    border: none;
+    position: center;
+    padding: 20px 50px;
+    font-size: 30px;
+    font-weight: bold;
 }
